# HostingerVPSManager

./: .codacy.yaml  .gitignore  .pre-commit-config.yaml  ADDITIONAL_FEATURES.md  CHANGELOG.md  CONTRIBUTING.md  HostingerVPSManager.spec  README.md  hostinger_vps_manager.spec  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: codacy.instructions.md
.github/workflows/: ci.yml  release.yml
src/: __init__.py  api_client.py  credentials.py  main.py  main_window.py  styles.py
src/app/: constants.py  resources.py
src/controllers/: __init__.py  firewall_controller.py
src/core/: api_client.py  credentials.py
src/core/formatting/: datacenter.py
src/core/network/: ip_detect.py
src/ui/dialogs/: __init__.py  about.py  account_manager.py  add_account.py  firewall_rule.py  settings.py  ssh_key.py
src/ui/tabs/: __init__.py  firewall_tab.py
src/workers/: __init__.py  api_worker.py  worker_pool.py
tests/: conftest.py
tests/unit/controllers/: test_firewall_controller.py
tests/unit/core/: test_datacenter_formatting.py  test_ip_detect.py
tests/unit/workers/: test_worker_pool.py
