[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hostinger-vps-manager"
version = "1.1.0"
description = "Cross-platform desktop GUI for managing Hostinger VPS instances via the public Hostinger API."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Amos Geva", email = "amos@geva.solutions" }
]
keywords = ["hostinger", "vps", "pyqt6", "desktop", "gui", "infrastructure", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet",
]
dependencies = [
    "PyQt6>=6.11.0",
    "requests>=2.33.1",
    "keyring>=25.7.0",
    "matplotlib>=3.8.0",
    "psutil>=7.2.2",
    "pywin32>=311; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "pylint>=3.3",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "pyinstaller>=6.20.0",
]

[project.urls]
Homepage = "https://github.com/amosgeva/HostingerVPSManager"
Issues = "https://github.com/amosgeva/HostingerVPSManager/issues"
Source = "https://github.com/amosgeva/HostingerVPSManager"

[project.scripts]
hostinger-vps-manager = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist", "assets", ".codacy"]

[tool.ruff.lint]
# Conservative starter set; tighten over time. Aligned with the existing
# pylint allowlist in .codacy/tools-configs/pylint.rc.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # bandit (security)
    "C4",   # comprehensions
    "SIM",  # simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "S101",  # asserts in tests are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".codacy"]
